--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "chatux",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "",
   "main": "dist/chatux.min.js",
   "scripts": {
     "start": "webpack-dev-server",
     "startr": "set NODE_ENV=test&&webpack-dev-server --config webpack.config.js --mode production",
+    "start:chat-server": "node example_chat_server/server.js",
     "build": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "set NODE_ENV=test&&webpack --config webpack.config.js --mode production"
